syntax = "proto3";
package pb;
option go_package = "./pkg/messaging/pb";

import  "base.proto";

message PeerQueryResponse {
  MetaData metadata = 1;

  repeated string peerIds = 2;
}